<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="12dp"
    app:cardCornerRadius="12dp"
    android:background="@drawable/gradient2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:orientation="vertical"
        android:background="@drawable/gradient2">

        <!--text view for our course name-->
        <TextView
            android:id="@+id/idTVdetailName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/name"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <!--text view for our course tracks-->
            <TextView
                android:id="@+id/idTVDetailAge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/age"

                android:textColor="@color/white" />


            <!--text view for our course duration-->
            <TextView
                android:id="@+id/idTVMailId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/mailid"
                android:textColor="@color/white" />

        </LinearLayout>

        <!--text view for our course description-->
        <TextView
            android:id="@+id/idTVDetailPhonenumber"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/phonenum"

            android:textColor="@color/white" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
